@@ -157,6 +157,7 @@ Table of contents:
   JBessel(n, x) = BesselJ(n+1/2, x)
   KBessel, KBessel2 [2nd kind]
   JacobiTheta
+  (see http://www.ams.org/journals/mcom/0000-000-00/S0025-5718-2017-03245-2/home.html)
   LogIntegral
   ExponentialIntegralEn (formula 5.1.4 of Abramowitz and Stegun)
   DawsonIntegral
@@ -664,6 +665,20 @@ Table of contents:
 - check the small-precision tables in the tests?
   This may require to export some pointer to the tables, but this could
   be done only if some debug macro is defined.
+
+- use mpfr_allocate_func, etc. instead of *__gmp_allocate_func, etc.
+  This would be cleaner (as the __gmp_ prefix is reserved by GMP and
+  its use might change) and simpler. In mpfr-gmp.h, the 3 #define's
+  should be reversed and used with the GMP build instead of without.
+
+- optionally use malloc() for the caches? See mpfr_mp_memory_cleanup.
+  Note: This can be implemented by adding a TLS flag saying whether we
+  are under cache generation or not, and by making the MPFR allocation
+  functions consider this flag. This needs the above change concerning
+  mpfr_allocate_func vs *__gmp_allocate_func. Moreover, this can only
+  work for mpfr_t caching (floating-point constants), not for mpz_t
+  caching (Bernoulli constants) because we do not have the control
+  of memory allocation for mpz_init.
 
 
 ##############################################################################
