@@ -34,17 +34,29 @@ int error;
   } while (0)
 
 
-/* Maybe better create its own test file ? */
+/* Maybe better create its own test file? */
 static void
 check_neg_special (void)
 {
   mpfr_t x;
+  int s1, s2;
+
   mpfr_init (x);
+
   MPFR_SET_NAN (x);
   mpfr_clear_nanflag ();
   mpfr_neg (x, x, MPFR_RNDN);
   PRINT_ERROR_IF (!mpfr_nanflag_p (),
                   "ERROR: neg (NaN) doesn't set Nan flag.\n");
+
+  /* check following "bug" is fixed:
+     https://sympa.inria.fr/sympa/arc/mpfr/2017-11/msg00003.html */
+  s1 = mpfr_signbit (x) != 0;
+  mpfr_neg (x, x, MPFR_RNDN);
+  s2 = mpfr_signbit (x) != 0;
+  PRINT_ERROR_IF (s1 == s2,
+                  "ERROR: neg (NaN) doesn't correctly flip sign bit.\n");
+
   mpfr_clear (x);
 }
 
